--- a/opencv_librealsense.vcxproj
+++ b/opencv_librealsense.vcxproj
@@ -100,7 +100,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>realsense.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Administrator\Documents\librealsense\examples\third_party\glfw\msvc140;C:\Users\Administrator\Documents\librealsense\bin\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Administrator\Documents\librealsense\examples\third_party\glfw\msvc140;C:\Users\Administrator\Documents\librealsense\bin\x64;C:\Users\Administrator\Documents\librealsense\examples\third_party\glfw\msvc140\obj\Release-x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
